--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img src="./img/body__blog.svg" alt="img" class="blog__svg1">
   <img src="./img/body__blog2.svg" alt="img" class="blog__svg2">
   <img src="./img/body__blog3.svg" alt="img" class="blog__svg3">
-  <a href="https://www.instagram.com/roman_timoshchuk/" target="_blank" class="banner"> <img src="./img/coding.svg" alt="coding"> </a>
+  <div class="banner"> <img src="./img/coding.svg" alt="coding"> </div>
   <header>
     <!-------------------------------------------  Navbar ------------------------------------------->
     <nav>
